fix: input icons alignment

--- a/resources/scss/pages/auth-page.scss
+++ b/resources/scss/pages/auth-page.scss
@@ -112,7 +112,7 @@
 	height: 24px;
 	width: 24px;
 	right: 10px;
-	top: 34px;
+	top: 32px;
 }
 
 .auth-page__show-password {
